# tryengine

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  asan.supp  build_shaders.sh  imgui.ini  main.cpp  project.das_project  qwen-code
editor/: CMakeLists.txt  imgui.ini
editor/daslang/: Editor.das  EntryPoint.das  Hierarchy.das  editor.das
editor/include/editor/: AddressablesProvider.hpp  AppBootstrap.hpp  AssetContext.hpp  BaseSystem.hpp  Components.hpp  ControllerManager.hpp  Editor.hpp  EditorApp.hpp  EditorContext.hpp  EditorGUI.hpp  EditorScriptSystem.hpp  GameViewportPanel.hpp  HierarchyPanel.hpp  InputMapper.hpp  InspectorPanel.hpp  Reflection.hpp  ReflectionSystem.hpp  SceneManagerController.hpp  SceneViewportPanel.hpp  SelectionManager.hpp  Spawner.hpp
editor/include/editor/asset_factories/: AddressablesGroupFactory.hpp  AddressablesManifestFactory.hpp  AssetsFactoryManager.hpp  IAssetFactory.hpp  MaterialAssetFactory.hpp  SceneAssetFactory.hpp  ShaderAssetFactory.hpp
editor/include/editor/asset_inspector/: AssetInspectorManager.hpp  IAssetInspector.hpp  MaterialAssetInspector.hpp  ShaderAssetInspector.hpp  TextureAssetInspector.hpp
editor/include/editor/gui/: AddressablesPanel.hpp  BaseViewport.hpp  EditorGUI.hpp  FileBrowserPanel.hpp  GameViewportPanel.hpp  HierarchyPanel.hpp  IPanel.hpp  InspectorPanel.hpp  SceneViewportPanel.hpp
editor/include/editor/import/: GlslShaderImporter.hpp  GltfImporter.hpp  IAssetImporter.hpp  ImageImporter.hpp  ImportSystem.hpp  NativeImporter.hpp  TextureImporter.hpp
editor/include/editor/meta/: AssetHeader.hpp  AssetMetaHeader.hpp  GltfMeta.cpp  GltfMeta.hpp  MetaSerializer.hpp  ModelAssetMap.hpp  TextureImportSettings.hpp
editor/include/editor/utils/: EditorGUIUtils.hpp  Paths.hpp
editor/src/: BaseSystem.cpp  Editor.cpp  EditorApp.cpp  EditorGUI.cpp  EditorScriptBindings.cpp  GltfMeta.cpp  HierarchyPanel.cpp  InputMapper.cpp  InspectorPanel.cpp  Module_TryEditor.cpp  SceneViewportPanel.cpp  Spawner.cpp  main.cpp  mainOLD.cpp
editor/src/gui/: FileBrowserPanel.cpp  HierarchyPanel.cpp  InspectorPanel.cpp  SceneViewportPanel.cpp
editor/src/import/: GlslShaderImporter.cpp  GltfImporter.cpp  IAssetImporter.cpp  ImageImporter.cpp  ImportSystem.cpp  StbImageTinyGLTFImpl.cpp  TextureImporter.cpp
engine/: CMakeLists.txt
engine/assets/shaders/: vertex.vert
engine/core/include/engine/core/: AssetDatabase.hpp  BaseSystem.hpp  Clock.hpp  ComponentRegistry.hpp  Components.hpp  CoreTypes.hpp  Engine.hpp  EngineCommands.hpp  EngineContext.hpp  EngineState.hpp  GLMSerialization.hpp  ICacheBase.hpp  Input.hpp  InputState.hpp  InputTypes.hpp  Math.hpp  ResourceManager.hpp  Scene.hpp  SceneManager.hpp
engine/core/src/: AssetDatabase.cpp  BaseSystem.cpp  Clock.cpp  ComponentRegistry.cpp  Engine.cpp  Scene.cpp  SceneManager.cpp
engine/graphics/: CMakeLists.txt
engine/graphics/assets/shaders/: fragment.frag
engine/graphics/include/engine/graphics/: GpuMeshLoader.hpp  GpuResourceFactory.hpp  GpuTextureLoader.hpp  GraphicsContext.hpp  IRenderPass.hpp  MaterialLoader.hpp  MaterialSystem.hpp  MeshLoader.hpp  OpaqueGeometryPass.hpp  PipelineManager.hpp  RenderPipeline.hpp  RenderPreprocessor.hpp  RenderProfile.hpp  RenderSystem.hpp  RenderTarget.hpp  Renderer.hpp  ShaderAssetLoader.hpp  Types.hpp
engine/graphics/src/: GraphicsContext.cpp  RenderPipeline.cpp  RenderPreprocessor.cpp  RenderSystem.cpp  Renderer.cpp
engine/include/engine/: ComponentRegistry.hpp  Components.hpp  Engine.hpp  EngineCommands.hpp  EngineContext.hpp  EngineState.hpp  EngineTypes.hpp  GraphicsContext.hpp  Input.hpp  Math.hpp  RenderTarget.hpp  Renderer.hpp  ResourceManager.hpp  Scene.hpp  SceneManager.hpp
engine/resources/: CMakeLists.txt
engine/resources/include/engine/resources/: AssetDatabase.hpp  GltfLoader.hpp  ICacheBase.hpp  MaterialAssetData.hpp  MeshDataLoader.hpp  ResourceManager.hpp  ResourceManagerOLD.hpp  TMeshLoader.hpp  TTextureLoader.hpp  TextureLoader.hpp  Types.hpp
engine/resources/src/: ResourceManager.cpp  ResourceManagerOLD.cpp  TinyGLTFImpl.cpp
engine/src/: BaseSystem.cpp  ComponentRegistry.cpp  Engine.cpp  GraphicsContext.cpp  Renderer.cpp  ResourceManager.cpp  Scene.cpp  SceneManager.cpp
engine_source/: CMakeLists.txt
engine_source/core/: CMakeLists.txt  compiler_main.cpp
engine_source/core/include/engine/core/: Addressables.hpp  AddressablesGroupAsset.hpp  AssetDatabase.hpp  BaseSystem.hpp  Clock.hpp  ComponentRegistry.hpp  ComponentSerializers.hpp  Components.hpp  Engine.hpp  GLMSerialization.hpp  GameAPI.hpp  ICacheBase.hpp  InputService.hpp  Math.hpp  RandomUtil.hpp  ResourceManager.hpp  Scene.hpp  SceneManager.hpp  ScriptSystem.hpp  SpawnPoint.hpp
engine_source/core/src/: AssetDatabase.cpp  BaseSystem.cpp  Clock.cpp  Engine.cpp  Module_Renderer.cpp  SceneManager.cpp  ScriptSystem.cpp
engine_source/daslang/: Render.das  Temp.das  Types.das
engine_source/graphics/: CMakeLists.txt
engine_source/graphics/include/engine/graphics/: GraphicsContext.hpp  IRenderPass.hpp  MaterialSystem.hpp  May.hpp  MeshLoader.hpp  OpaqueGeometryPass.hpp  PipelineDescriptor.hpp  PipelineManager.hpp  (+7 more)
engine_source/graphics/src/: GraphicsContext.cpp  May.cpp  RenderPipeline.cpp  RenderSystem.cpp  Renderer.cpp
engine_source/resources/: CMakeLists.txt
game/: CMakeLists.txt
game/assets/: NewMaterial.mat  NewScene.scene  lance.glb
game/assets/Materials/lance/: Material_Vulcan.mat
game/assets/Materials/lock_paving_square_2k/: zamkova_dlazba_DiffuseMap.mat
game/assets/box/: license.txt
game/assets/box_low_poly/: scene.gltf
game/assets/scenes/: First.scene  Second.scene  nameless_scene(1).scene  nameless_scene.scene  nameless_scene_1.scene
game/assets/scripts/: game.das  gameq.das  main.das
game/assets/shaders/: NewShader.shader
game/include/game/: GameAPI.hpp  GameMain.hpp  RotateSystem.hpp
game/modules/: test.cpp
game/project_data/addressables/: addressables.addressables
game/project_data/addressables/asset_groups/: Base.asset_group  scenes.asset_group
game/src/: GameExtern.cpp  game.cpp
(+59 files in other folders)
